feat : 주문 페이지 기본 주소 자동 입력, 적립금 구현, 마이페이지 적립금, 쿠폰 적용

--- a/src/main/frontend/src/styles/myInfo/buyList/buyListContent.css
+++ b/src/main/frontend/src/styles/myInfo/buyList/buyListContent.css
@@ -13,15 +13,20 @@
 }
 
 .m-c-g-t-content-small {
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     border: 1px solid var(--color-silver-100);
     background-color: var(--color-white);
     height: 100px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .t-small-span {
-    font-size: 44px;
+    font-size: 28px;
 }
 
 .m-c-g-t-buy-content {
