--- a/src/main/frontend/src/components/admin/userTool/adminUserModal.css
+++ b/src/main/frontend/src/components/admin/userTool/adminUserModal.css
@@ -8,6 +8,8 @@
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
     border-radius: 10px;
     border: 1px solid #ebebeb;
+    max-height: 90vh; /* Viewport의 높이에 맞춰 최대 높이 설정 */
+    overflow-y: auto; /* 내용이 넘칠 경우 스크롤바 표시 */
 }
 
 .modal-content {
@@ -39,3 +41,11 @@
         border: 1px solid #a39485 !important;
         box-shadow: 0 2px 5px rgba(0,0,0,.25);
     }
+
+.modal-order-info {
+    display: flex;
+}
+
+.order-info-flex {
+    display: flex;
+}
