--- a/src/main/frontend/src/components/admin/userTool/adminUserModal.css
+++ b/src/main/frontend/src/components/admin/userTool/adminUserModal.css
@@ -10,6 +10,7 @@
     border: 1px solid #ebebeb;
     max-height: 90vh; /* Viewport의 높이에 맞춰 최대 높이 설정 */
     overflow-y: auto; /* 내용이 넘칠 경우 스크롤바 표시 */
+    overflow-x: hidden; /* 내용이 넘칠 경우 가로 스크롤바는 표시하지 않음 */
 }
 
 .modal-content {
