--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab/QnaReplyWrite.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab/QnaReplyWrite.css
@@ -7,11 +7,11 @@
     place-items: center;
     margin: 100px 500px;
     padding : 10px;
-    background-color: lightgreen;
+    background-color: white;
 }
 
 .qna-title{
-    color : honeydew;
+    color : black;
 }
 
 .qna-title p{
@@ -19,7 +19,7 @@
 }
 
 .qna-content{
-    color : honeydew;
+    color : black;
 }
 
 .qna-content p {
@@ -29,7 +29,7 @@
 .reply-content{
     display: flex;
     font-size: 20px;
-    color: white;
+    color: black;
     margin-top: 10px;
 }
 
@@ -65,7 +65,7 @@
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
     background-color: #a39485;
-    color: #fff;
+    color: #000000;
     border: 2px solid #a39485;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
@@ -87,7 +87,7 @@
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
     background-color: #3498db;
-    color: #fff;
+    color: #000000;
     border: 2px solid #3498db;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-left: 5px;
