fix : 메인화면 크기 수정

--- a/src/main/frontend/src/styles/MainPage/RollingBanner.css
+++ b/src/main/frontend/src/styles/MainPage/RollingBanner.css
@@ -1,7 +1,8 @@
 .RollingBanner{
     display: block;
     border: 1px solid #AAAAAA;
-    width: 1500px;
+    width : 80vw;
+    min-width: 1500px;
     margin-left: 75px;
 }
 
