--- a/src/main/frontend/src/styles/Header.css
+++ b/src/main/frontend/src/styles/Header.css
@@ -4,9 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
     aspect-ratio: auto;
-    width : 1690px;
+    width : 100vw;
+    min-width: 1680px;
 }
 
 .header-search{
