--- a/src/main/frontend/src/styles/MainCategory.css
+++ b/src/main/frontend/src/styles/MainCategory.css
@@ -7,7 +7,8 @@
     font-size: calc(10px + 2vmin);
     aspect-ratio: auto;
     border-bottom: 1px solid #595959;
-    width: 1690px;
+    width : 100vw;
+    min-width: 1680px;
 }
 
 .category-menu {
