--- a/src/main/frontend/src/styles/MainPage/NewArrival.css
+++ b/src/main/frontend/src/styles/MainPage/NewArrival.css
@@ -1,7 +1,8 @@
 .new-arrivals{
     margin-top: 100px;
     margin-bottom: 150px;
-    width: 1690px;
+    width : 100vw;
+    min-width: 1680px;
 }
 
 .new-arrival-title{
