--- a/src/main/frontend/src/styles/MainPage/QuickLink.css
+++ b/src/main/frontend/src/styles/MainPage/QuickLink.css
@@ -1,7 +1,8 @@
 .quick-links{
     margin-top: 100px;
     margin-bottom: 100px;
-    width: 1690px;
+    width : 100vw;
+    min-width: 1680px;
 }
 
 .quick-link-title{
