--- a/src/main/frontend/src/styles/GoodsList/GoodsListCategory.css
+++ b/src/main/frontend/src/styles/GoodsList/GoodsListCategory.css
@@ -1,7 +1,8 @@
 .goods-list-categories{
-    margin-left: 200px;
-    margin-right: 200px;
-    width: 1290px;
+    width : 100vw;
+    min-width: 1690px;
+    display : grid;
+    place-items: center;
 }
 
 .goods-list-category-title{
@@ -11,6 +12,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 1300px;
 }
 
 .goods-list-category{
@@ -20,6 +22,7 @@
     margin-top: 20px;
     white-space: nowrap;
     flex-wrap: wrap;
+    width: 1300px;
 }
 
 .categories{
